# hackathon

./: .env.example  .gitignore  BUILD_SPEC.md  LICENSE  SKELETON_README.md  agent.py  agent_stub.py  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  runner.py  signals.py  state_machine.py
.github/workflows/: deploy-docs.yml
andreas/: bot.md  persona.md  simulate.py
bots/: persona.py  persona_factory.py  persona_factory_sensitive.py
coach/: __init__.py  detection.py  features.py  llm_realize.py  policy.py  realize.py
design_idea/: README.md  healthcover-warm.css  journey-reference.html
extras/: hypotheses.md
models/: gbm.json
outputs/: Franz_Huber_20260531_013515_CONVERTED.json  Franz_Huber_20260531_052308_SERVICE_CONTACT.json  Franz_Huber_20260531_052423_S4_INITIAL_PRICE.json  Franz_Huber_20260531_052535_CONVERTED.json  Franz_Huber_20260531_052712_CONVERTED.json  Franz_Huber_20260531_052721_ROUTED_ADVISOR.json  Franz_Huber_20260531_054307_CONVERTED.json  Franz_Huber_20260531_054322_SERVICE_CONTACT.json  Franz_Huber_20260531_054328_ROUTED_ADVISOR.json  Franz_Huber_20260531_054414_ROUTED_ADVISOR.json  Franz_Huber_20260531_054423_ROUTED_ADVISOR.json  Franz_Huber_20260531_054521_S3_PERSONAL_DATA.json  Franz_Huber_20260531_054531_CONVERTED.json  Franz_Huber_20260531_054715_S1_COVERAGE_TYPE.json  Franz_Huber_20260531_054732_CONVERTED.json  Franz_Huber_20260531_054837_S1_COVERAGE_TYPE.json  Judith_Berger_20260531_051344_SERVICE_CONTACT.json  Judith_Berger_20260531_051350_SERVICE_CONTACT.json  Judith_Berger_20260531_052241_SERVICE_CONTACT.json  Judith_Berger_20260531_052251_ROUTED_ADVISOR.json  Judith_Berger_20260531_052318_SERVICE_CONTACT.json  Judith_Berger_20260531_052323_SERVICE_CONTACT.json  Judith_Berger_20260531_052554_SERVICE_CONTACT.json  Judith_Berger_20260531_054239_SERVICE_CONTACT.json  Judith_Berger_20260531_054339_SERVICE_CONTACT.json  Judith_Berger_20260531_054346_SERVICE_CONTACT.json  Judith_Berger_20260531_054402_SERVICE_CONTACT.json  Judith_Berger_20260531_054433_SERVICE_CONTACT.json  Judith_Berger_20260531_054535_SERVICE_CONTACT.json  Judith_Berger_20260531_054539_SERVICE_CONTACT.json  Judith_Berger_20260531_054542_SERVICE_CONTACT.json  Judith_Berger_20260531_054547_SERVICE_CONTACT.json  Judith_Berger_20260531_054613_SERVICE_CONTACT.json  Peter_Wagner_20260531_051339_SERVICE_CONTACT.json  Peter_Wagner_20260531_052244_SERVICE_CONTACT.json  Peter_Wagner_20260531_052546_SERVICE_CONTACT.json  Peter_Wagner_20260531_052557_SERVICE_CONTACT.json  Peter_Wagner_20260531_052601_SERVICE_CONTACT.json  Peter_Wagner_20260531_054255_ROUTED_ADVISOR.json  Peter_Wagner_20260531_054333_SERVICE_CONTACT.json  (+12 more)
services/: coach.Dockerfile  ui.Dockerfile
services/inference/: Dockerfile  README.md
services/ui/: app.py  debug_view.py  journey_view.py  session.py
services/ui/tests/: conftest.py  scenarios.py  test_demo.py  test_journey.py  test_ui.py
simulation/: ai_coach.py  coach.py  engine.py  funnel.py  intervention_model.py  json_utils.py  llm_bot.py  llm_coach_bot.py
slides/: .gitignore  README.md  package-lock.json  package.json  slides.md  style.css
slides/components/: Brand.vue  Nudge.vue  PersonaSwitch.vue
slides/layouts/: cover.vue  default.vue  section.vue  statement.vue
slides_src/components/: Persona.vue
sub/: README.md  REPORT.md  requirements.txt
tests/: test_phase1_baseline.py  test_phase2_uplift.py  test_phase3_ablation.py  test_phase4_wording.py
tracks/insurance-uniqa/: Analyse KV ambulant_AI Hackathon.pptx  Private_Doctor_Tariff_Product_Reference_EN.md  README.md  Track_AI_Guided_Conversion_Flow_EN.md  persona_judith_segment_1.md  personas_comparison_matrix.md  uniqa-funnel-doc_en.md
training/: data_gen.py  distill_persona.py  leonardo.sbatch  leonardo_simulation.sbatch  train_gbm.py  train_lora.py  validate_dataset.py
training/datasets/: persona_sft.jsonl  persona_sft_holdout.jsonl
training/seed_data/: assemble.py  build_seeds.py  franz.jsonl  judith.jsonl  labeler.py  peter.jsonl
utils/: llm_client.py
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/: architecture.md  intro.md  phases.md  reference.md  running-locally.md
website/src/pages/: index.js
what_to_merge_with/: test_persona_generation.py
what_to_merge_with/submission/: SUBMISSION.md
what_to_merge_with/tracks/forecasting-sybilion/: Track_Build_on_Probability.md
(+7 files in other folders)
