[project]
name = "conversion-coach"
version = "0.1.0"
description = "Conversion Coach — simulation substrate + staged coach (BUILD_SPEC)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

# Phase 1 baseline only needs pyyaml. Later phases are gated behind extras
# so the coach container stays small and CPU-only (see requirements.txt note
# that torch/transformers belong to the Leonardo LoRA env, not here).
dependencies = [
    "openai>=2.38.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Phase 3: local GBM detection, metrics, experiment tracking.
phase3 = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "wandb>=0.16",
]
# Phase 4+: OpenAI-compatible client talking to the inference service.
phase4 = [
    "openai>=1.0",
]
# Phase 3.5: NiceGUI viewer + Playwright test driver.
# `nicegui[testing]` ships the in-process `User` fixture (no browser); the
# actual visible / on-stage demo is driven by `playwright` directly against
# the running NiceGUI app. We do NOT use nicegui's `Screen` fixture, which
# is Selenium-based and requires a system Chrome (BUILD_SPEC §Phase 3.5).
ui = [
    "nicegui[testing]>=2.0",
    "playwright>=1.40",
    "pytest-playwright>=0.5",
]
# Phase 5: LoRA fine-tune env (Leonardo only — do NOT install into the coach
# container). torch/transformers/peft are GPU-heavy and intentionally kept out
# of the runtime image; the inference container only needs vLLM + the merged
# weights, and the coach container only needs the openai client (phase4 extra).
lora = [
    "torch>=2.3",
    "transformers>=4.45",
    "peft>=0.12",
    "trl>=0.11",
    "accelerate>=0.34",
    "datasets>=2.20",
    "wandb>=0.16",
]
dev = [
    "pytest>=8.0",
]

[tool.uv]
default-groups = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coach"]
